--- a/PeladaEsporteClube/app/build.gradle
+++ b/PeladaEsporteClube/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
     compile 'com.google.firebase:firebase-database:11.0.2'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
