--- a/PeladaEsporteClube/app/src/main/AndroidManifest.xml
+++ b/PeladaEsporteClube/app/src/main/AndroidManifest.xml
@@ -31,15 +31,19 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity">
+
+        <activity android:name=".MainActivity" android:screenOrientation="portrait"/>
+
+        <activity android:name=".RegisterActivity" android:screenOrientation="portrait"/>
+
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"></activity>
+
     </application>
 
 </manifest>
