--- a/PeladaEsporteClube/app/src/main/AndroidManifest.xml
+++ b/PeladaEsporteClube/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".MessageListItem"></activity>
     </application>
 
 </manifest>
