--- a/PeladaEsporteClube/app/build.gradle
+++ b/PeladaEsporteClube/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.0.2'
     compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
     testCompile 'junit:junit:4.12'
 }
 
