--- a/PeladaEsporteClube/app/src/main/AndroidManifest.xml
+++ b/PeladaEsporteClube/app/src/main/AndroidManifest.xml
@@ -3,14 +3,14 @@
     package="com.example.weuller.peladaesporteclube">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/futebol"
@@ -69,7 +69,9 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".MapFootballFieldActivity"></activity>
+
     </application>
 
 </manifest>
