criando tela de agendar futebol

--- a/PeladaEsporteClube/app/src/main/AndroidManifest.xml
+++ b/PeladaEsporteClube/app/src/main/AndroidManifest.xml
@@ -70,8 +70,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".MapFootballFieldActivity"></activity>
-
+        <activity android:name=".MapFootballFieldActivity" />
+        <activity android:name=".ScheduleFootballActivity"></activity>
     </application>
 
 </manifest>
